Change surefire conf