@@ -69,7 +69,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.17</version>
 					<configuration>
-						<argLine>-Xms256m -Xmx1024m</argLine>
+						<argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
 					</configuration>
 				</plugin>
 			</plugins>
